[package]
name = "usb-pd-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"

stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f030", "stm32f030x4"] }

panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
systick-monotonic = "1.0.1"
embedded-hal = "0.2.7"
bitbang-hal = "0.3.2"

fusb302b = { path = "../fusb302b" }
