[package]
name = "fusb302b"
version = "0.1.0"
edition = "2021"

[dependencies]
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = "0.2.7"
fixed-queue = "0.5.1"
fugit = "0.3.6"
defmt = "0.3.4"
paste = "1.0.12"
proc-bitfield = "0.2.2"

usb-pd = { path = "../usb-pd" }
