[package]
name = "fusb302b"
version = "0.0.1"
edition = "2021"
description = "FUSB302B driver for `usb-pd` library."
documentation = "https://docs.rs/fusb302b"
repository = "https://github.com/fmckeogh/usb-pd-rs"
homepage = "https://github.com/fmckeogh/usb-pd-rs"
license = "MIT"
keywords = ["nostd", "usb-pd", "driver", "embedded", "fusb302b"]

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = "0.2.7"
heapless = { version = "0.7.16", features = ["defmt"] }
fugit = "0.3.7"
defmt = "0.3.5"
paste = "1.0.13"
proc-bitfield = "0.3.0"

usb-pd = { path = "../usb-pd" }
