[package]
name = "fusb302b"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = "0.2.7"
heapless = { version = "0.7.16", features = ["defmt"] }
fugit = "0.3.7"
defmt = "0.3.5"
paste = "1.0.13"
proc-bitfield = "0.2.4"

usb-pd = { path = "../usb-pd" }
