[package]
name = "usb-pd"
version = "0.0.1"
edition = "2021"
description = "USB-PD `no_std` library with source and sink support."
documentation = "https://docs.rs/usb-pd"
repository = "https://github.com/fmckeogh/usb-pd-rs"
homepage = "https://github.com/fmckeogh/usb-pd-rs"
license = "MIT"
keywords = ["nostd", "usb-pd", "power", "embedded"]

[dependencies]
proc-bitfield = "0.2.4"
byteorder = { version = "1.4.3", default-features = false }
defmt = "0.3.5"
fugit = "0.3.7"
heapless = { version = "0.7.16", features = ["defmt-impl"] }
