[package]
name = "usb-pd"
version = "0.0.1"
edition = "2021"
description = "USB-PD `no_std` library with source and sink support."
documentation = "https://docs.rs/usb-pd"
repository = "https://github.com/fmckeogh/usb-pd-rs"
homepage = "https://github.com/fmckeogh/usb-pd-rs"
license = "MIT"
keywords = ["nostd", "usb-pd", "power", "embedded"]

[dependencies]
proc-bitfield = "0.4.0"
byteorder = { version = "1.5.0", default-features = false }
defmt = "0.3.6"
heapless = { version = "0.8.0", features = ["defmt-03"] }
embassy-time = "0.3.0"
