[package]
name = "usb-pd"
version = "0.0.1"
edition = "2021"
description = "USB-PD `no_std` library with source and sink support."
documentation = "https://docs.rs/usb-pd"
repository = "https://github.com/fmckeogh/usb-pd-rs"
homepage = "https://github.com/fmckeogh/usb-pd-rs"
license = "MIT"
keywords = ["nostd", "usb-pd", "power", "embedded"]

[lib]
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
test = false

[dependencies]
proc-bitfield = "0.4.0"
byteorder = { version = "1.5.0", default-features = false }
defmt = "0.3.6"
heapless = { version = "0.8.0", features = ["defmt-03"] }
embassy-time = "0.3.0"
uom = { version = "0.36.0", default-features = false, features = ["autoconvert", "si", "u8", "u16", "u32"] }
