[package]
name = "zy12pdn"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f030", "stm32f030x4"] }
rtic = { version = "2.0.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embedded-hal = "0.2.7"
bitbang-hal = "0.3.2"

fusb302b = { path = "../fusb302b" }
usb-pd = { path = "../usb-pd" }
