[package]
name = "zy12pdn"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embassy-stm32 = { version =  "0.1.0", features = ["memory-x", "stm32f030k6", "time-driver-any","exti"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "nightly"]  }
embassy-time = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
#panic-probe = { version = "0.3.1", features = ["print-defmt"] }
panic-halt = "0.2.0"

fusb302b = { path = "../fusb302b" }
usb-pd = { path = "../usb-pd" }
