[package]
name = "zy12pdn"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f030", "stm32f030x4"] }

defmt = "0.3.4"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"

fixed-queue = "0.5.1"
bitbang-hal = "0.3.2"

fusb302b = { path = "../fusb302b" }
usb-pd = { path = "../usb-pd" }
